--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.13'
     compile 'org.springframework.amqp:spring-rabbit:1.5.5.RELEASE'
     compile 'org.hibernate:hibernate-core:5.1.0.Final'
+    compile 'org.xerial:sqlite-jdbc:3.8.11.2'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
