--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,37 @@
-// Apply the java plugin to add support for Java
-apply plugin: 'java'
-
-// In this section you declare where to find the dependencies of your project
-repositories {
-    // Use 'jcenter' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
+    }
 }
 
-// In this section you declare the dependencies for your production and test code
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'spring-boot'
+
+jar {
+    baseName = 'test'
+    version =  '0.1.0'
+}
+
+repositories {
+    mavenCentral()
+    maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.13'
-    compile 'org.springframework.amqp:spring-rabbit:1.5.5.RELEASE'
-    compile 'org.hibernate:hibernate-core:5.1.0.Final'
-    compile 'org.xerial:sqlite-jdbc:3.8.11.2'
-    compile 'com.h2database:h2:1.4.191'
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.amqp:spring-rabbit")
+    compile("com.h2database:h2")
+    testCompile("junit:junit")
+}
 
-
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.12'
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
 }
