--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.springframework.amqp:spring-rabbit")
     compile("com.h2database:h2")
     compile("org.xerial:sqlite-jdbc:3.8.11.2")
+    compile("org.apache.mina:mina-core:2.0.13")
     testCompile("junit:junit")
 }
 
