--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,14 @@
-buildscript {
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'eclipse'
+    apply plugin: 'idea'
+
     repositories {
         mavenCentral()
     }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
-    }
-}
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'spring-boot'
-
-jar {
-    baseName = 'test'
-    version =  '0.1.0'
-}
-
-repositories {
-    mavenCentral()
-    maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
-}
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-dependencies {
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("com.h2database:h2")
-    compile("org.xerial:sqlite-jdbc:3.8.11.2")
-    compile("org.apache.mina:mina-core:2.0.13")
-    testCompile("junit:junit")
+    
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 }
 
 task wrapper(type: Wrapper) {
