--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -1,9 +1,55 @@
 
+configurations {
+    querydslapt
+}
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa:1.3.3.RELEASE")
     compile("com.h2database:h2:1.4.191")
     compile("org.xerial:sqlite-jdbc:3.8.11.2")
     compile("org.apache.mina:mina-core:2.0.13")
-  
-    testCompile("junit:junit")
+    compile("com.mysema.querydsl:querydsl-jpa:3.6.3")
+    querydslapt ("com.mysema.querydsl:querydsl-apt:3.6.3:jpa")
+
+    //testCompile("junit:junit")
+}
+
+sourceSets {
+    generated {
+        java {
+            srcDirs = ['src/main/generated']
+        }
+    }
+}
+
+
+task generateQueryDSL(type: JavaCompile, group: 'build', description: 'Generates the QueryDSL query types') {
+    source = sourceSets.main.java
+    classpath = configurations.compile + configurations.querydslapt
+    options.compilerArgs = [
+            "-proc:only",
+            "-processor", "com.mysema.query.apt.jpa.JPAAnnotationProcessor"
+    ]
+    destinationDir = sourceSets.generated.java.srcDirs.iterator().next()
+}
+
+compileJava {
+    dependsOn generateQueryDSL
+    source generateQueryDSL.destinationDir
+}
+
+compileGeneratedJava {
+    dependsOn generateQueryDSL
+    options.warnings = false
+    classpath += sourceSets.main.runtimeClasspath
+}
+
+clean {
+    delete sourceSets.generated.java.srcDirs
+}
+
+idea {
+    module {
+        sourceDirs += file('src/main/generated')
+    }
 }
