--- a/authority/src/main/resources/application.yaml
+++ b/authority/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   profiles: default
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:file:./database;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:file:./auth;DB_CLOSE_ON_EXIT=FALSE
 
 spring.jpa.hibernate.ddl-auto: update
 ---
