--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -5,6 +5,7 @@ configurations {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa:1.3.3.RELEASE")
+    compile("org.springframework.security:spring-security-web:4.0.4.RELEASE")
     compile("com.h2database:h2:1.4.191")
     compile("org.xerial:sqlite-jdbc:3.8.11.2")
     compile("org.apache.mina:mina-core:2.0.13")
